2001-12-16  Gediminas Paulauskas <menesis@delfi.lt>

	* gnome-run.c, launcher.c, menu-properties.c, menu.c, panel-config.c,
	swallow.c: use GTK_RESPONSE_* instead of custom *_BUTTON
	enumerations -- this makes Help buttons left-aligned. Reorder buttons
	to comply with HIG, set default response to leftmost button.

Fri Dec 14 16:50:07 2001  George Lebl <jirka@5z.com>

	* drawer.c: reenable property apply code

Fri Dec 14 16:41:23 2001  George Lebl <jirka@5z.com>

	* menu.[ch], launcher.c: some deFIXMEization.  Remove some dead
	  code, add some error handeling, fix some comments.  Directory
	  only ditem entry set, and also init type for applications.  Also
	  what the hint stuff from the tearoff menus.  It wouldn't work
	  properly anyway and it's supposed to be handled by the WM
	  anyway.  Also hardcode default to true for icons and tearoff keys,
	  and re-enable the use of the gconf key in the icons thing.  Also
	  use the new key for icons.  I can't find a tearoff one.  Is there
	  one?

2001-12-14  Alex Larsson  <alexl@redhat.com>

	* panel-applet-frame.c (panel_applet_frame_change_background_color):
	Make colors 4 chars per channel, they are 16bit.

2001-12-14  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-frame.c: (panel_applet_frame_get_applet_shell):
	one last Vertigo change.

2001-12-14  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-frame.[ch]:
	(panel_applet_frame_save_session): kill

	* session.c: (save_applet_configuration): upd.

2001-12-14  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-frame.[ch], panel-shell.[ch]:
	  panel-types.h: move to our reserved GNOME_Vertigo
          namespace.

2001-12-14  Satan

	* menu.c: (panel_menu_have_icons):

	Disable GConf and make the panel menu icons actually work.
	Spit out one g_warning as penance.

2001-12-14  Seth Nickell  <snickell@stanford.edu>

	* applet.c: (applet_callback_callback):
	* menu-properties.c: (get_real_menu_path):