@@ -1,3 +1,7 @@
+Sun Dec 16 16:00:49 2001  George Lebl <jirka@5z.com>
+
+	* xstuff.c: when rasing windows also wnck activate them
+
 2001-12-16  Gediminas Paulauskas <menesis@delfi.lt>
 
 	* gnome-run.c, launcher.c, menu-properties.c, menu.c, panel-config.c,
